# nowlex-cff-system

./: .env  .gitignore  .gitignore.save  Aptfile  LIBREOFFICE_DIAGNOSTICO.md  build.sh  db.sqlite3  manage.py  nohup.out  nowlex_erp_mini_maicon_backup.sql  pyproject.toml  render-build.sh  render-start.sh  render.yaml  requirements.txt
contratos/: admin.py  apps.py  forms.py  gemini_client.py  models.py  permissoes.py  queue.py  referencia_escavador.py  supervision.py  tasks.py  tests.py  urls.py  views.py  widgets.py
contratos/api/: dependencies.py  serializers.py  template.html  urls.py  views.py
contratos/data/: decision_tree_config.py
contratos/integracoes_escavador/: api.py  atualizador.py  importador_escavador.py  parser.py  partes.py
contratos/migrations/: 0001_initial.py  0002_statusprocessual_processojudicial_status.py  0003_processojudicial_busca_ativa_andamento.py  0004_alter_parte_processo_advogado_andamentoprocessual_and_more.py  0005_parte_advogados_info.py  0006_statusprocessual_ativo.py  0007_carteira_processojudicial_carteira_and_more.py  0008_etiqueta.py  0009_alter_etiqueta_options_processojudicial_etiquetas_and_more.py  0010_remove_processojudicial_etiquetas_delete_etiqueta.py  0011_etiqueta_processojudicial_etiquetas_and_more.py  0012_alter_etiqueta_options_etiqueta_ordem.py  0012_buscaativaconfig.py  0013_listadetarefas_prazo_tarefa.py  0014_remove_contrato_data_contrato_and_more.py  0015_alter_contrato_valor_causa_and_more.py  0016_processojudicial_endereco.py  (+80 more)
nowlex_erp_mini/: asgi.py  settings.py  urls.py  views.py  wsgi.py
patches_pontuais/: PATCHES_COMPLETOS.js  PATCHES_PONTUAIS.md  PATCH_EVENTO_CHANGE.js
staticfiles/: staticfiles.json
(+190 files in other folders)
