[tool.poetry]
name = "nowlex-erp-mini-maicon"
version = "0.1.0"
description = "ERP Mini para estudos Django"
authors = ["maicon"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
psycopg2-binary = "^2.9.10"
django-nested-admin = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
