[tool.poetry]
name = "nowlex-erp-mini-maicon"
version = "0.1.0"
description = "ERP Mini para estudos Django"
authors = ["maicon"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
psycopg2-binary = "^2.9.10"
django-nested-admin = "^4.1.1"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
djangorestframework = "^3.16.0"
python-docx = "^1.2.0"
google-genai = "^1.53.0"
docx2pdf = "^0.1.8"
gunicorn = "^23.0.0"
whitenoise = "^6.11.0"
dj-database-url = "^3.1.0"
sentry-sdk = {extras = ["django"], version = "^2.33.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
